# runwell

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE_TEMPLATE  README.md  counter.py  crates.js  search-index.js  settings.html  source-files.js
.cargo/: config
.config/: cargo_spellcheck.dic  cargo_spellcheck.toml
ci/: all.html  fn.call.html  fn.cargo.html  fn.git.html  fn.main.html  fn.rustup.html  index.html  sidebar-items.js
crates/entity/: Cargo.toml
crates/entity/secondary/: default_map.rs
crates/entity/src/: index.rs  lib.rs  tests.rs
crates/entity/src/primary/: arena.rs  iter.rs  mod.rs  phantom_arena.rs
crates/entity/src/secondary/: default_bitvec.rs  default_map.rs  default_vec.rs  map.rs  mod.rs  vec.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: error.rs  frame.rs  instr.rs  lib.rs  tests.rs
crates/interpreter/src/core/: act_frame.rs  frame.rs  mod.rs  stack.rs
crates/interpreter/src/instr/: float.rs  int.rs  mod.rs  primitive.rs  terminal.rs
crates/interpreter/src/interpreter/: error.rs  frame.rs
crates/ir/: Cargo.toml  primitive.rs
crates/ir/builder/: variable.rs
crates/ir/instruction/: call.rs  conv.rs
crates/ir/instruction/int/: icmp.rs  unary.rs
crates/ir/interpreter/: error.rs  frame.rs  mod.rs
crates/ir/src/: display.rs  edge_visitor.rs  lib.rs  primitive.rs  replace_value.rs  store.rs  value_visitor.rs
crates/ir/src/builder/: error.rs  function.rs  instruction.rs  mod.rs  tests.rs  variable.rs
crates/ir/src/function/: builder.rs  instruction.rs  mod.rs  variable.rs
crates/ir/src/instruction/: call.rs  constant.rs  conv.rs  memory.rs  mod.rs  phi.rs  select.rs  terminal.rs  terminal_2.rs
crates/ir/src/instruction/float/: binary.rs  fcmp.rs  fconv.rs  mod.rs  unary.rs
crates/ir/src/instruction/int/: binary.rs  icmp.rs  iconv.rs  mod.rs  shift.rs  unary.rs
crates/ir/src/interpreter/: frame.rs  instr.rs  mod.rs  tests.rs
crates/module/: Cargo.toml
crates/module/src/: builder.rs  error.rs  func_type.rs  function.rs  global_var.rs  import_name.rs  init_expr.rs  lib.rs  linear_memory.rs  primitive.rs  store.rs  table.rs
crates/module/src/func_body/: builder.rs  error.rs  incomplete_phi.rs  instruction.rs  mod.rs  value.rs  variable.rs
crates/module/src/func_body2/: builder.rs  instruction.rs  mod.rs  replacer.rs  value.rs
crates/module/src/function/: builder.rs  instruction.rs  mod.rs  variable.rs
crates/module/src/module/: indent.rs  mod.rs  res.rs
crates/module/src/module/builder/: export.rs  function.rs  global.rs  import.rs  memory.rs  mod.rs  table.rs  types.rs
crates/module/src/module/instance/: memory.rs  mod.rs  table.rs
crates/module/src/module/instance/store/: global.rs  mod.rs  trap.rs
crates/module/src/store/: global.rs  memory.rs  mod.rs  trap.rs  value.rs
crates/wasm/: Cargo.toml
crates/wasm/builder/: import.rs
crates/wasm/builder/entity/: output.rs
crates/wasm/parse/: import.rs
crates/wasm/src/: error.rs  export.rs  func_type.rs  global.rs  import.rs  init_expr.rs  lib.rs  memory.rs  primitive.rs  section.rs  table.rs
crates/wasm/src/function/: blocks.rs  error.rs  mod.rs  stack.rs
crates/wasm/src/function/control/: block.rs  frame.rs  mod.rs  stack.rs
crates/wasm/src/function/operator/: base.rs  call.rs  control.rs  float.rs  int.rs  local.rs  local_global.rs  memory.rs  mod.rs  util.rs
crates/wasm/src/parse/: function.rs  primitive.rs  section.rs
crates/wasm/tests/: spec.rs
docs/: index.md
runwell_entity/: all.html  index.html  sidebar-items.js  struct.EntityArena.html  struct.Idx.html  struct.PhantomEntityArena.html  struct.RawIdx.html  trait.DisplayHook.html
runwell_interpreter/: all.html  enum.InterpretationError.html  index.html  sidebar-items.js  struct.EvaluationContext.html
runwell_ir/: all.html  index.html  sidebar-items.js  struct.ImmU32.html  struct.ImmU64.html  struct.Indent.html  trait.DisplayEdge.html  trait.DisplayInstruction.html  trait.VisitEdges.html  trait.VisitEdgesMut.html  trait.VisitValues.html  trait.VisitValuesMut.html
runwell_mmap/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.VirtualMemory.html  type.Result.html
runwell_module/: all.html  enum.ErrorKind.html  enum.FunctionBuilderError.html  enum.Mutability.html  enum.RuntimeValue.html  index.html  sidebar-items.js  struct.Error.html  struct.Function.html  struct.FunctionBody.html  struct.GlobalRef.html  struct.MemoryRef.html  struct.Module.html  struct.ModuleResources.html  struct.Store.html
runwell_vmem/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.RegionError.html  struct.VirtualMemory.html
runwell_wasm/: all.html  enum.ErrorKind.html  enum.ExportError.html  enum.ExportItem.html  enum.ExportKind.html  enum.ImportError.html  enum.InitExprError.html  enum.MemoryError.html  enum.PrimitiveError.html  enum.ReadError.html  enum.SectionError.html  enum.TableError.html  enum.TranslateError.html  enum.UnsupportedTypeDef.html  enum.UnsupportedWasmSection.html  fn.parse.html  index.html  sidebar-items.js  struct.Const.html  struct.Error.html  struct.Export.html  struct.FunctionType.html  struct.GlobalVariable.html  struct.ImportName.html  struct.InitExpr.html  struct.LinearMemoryDecl.html  struct.MemoryDataInit.html  struct.TableDecl.html  struct.Type.html  (+2 more)
(+667 files in other folders)
