[package]
name = "runwell_entity"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
ahash = "0.7"

[features]
default = ["std"]
bench = ["std"]
std = []
