[package]
name = "runwell_ir"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"

[dependencies]
entity = { package = "runwell_entity", path = "../entity" }
derive_more = "0.99.2"
smallvec = { version = "1.6", features = ["union"] }

[features]
default = ["std"]
bench = ["std"]
std = []
